# lexdora

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
infrastructure/kubernetes/: configmap.tf  database.tf  main.tf  namespace.tf  server.tf  variables.tf
migrations/: 20240324000000_initial_schema.sql
schema/: dora_schema.sql
scripts/: dev.sh  reset_db.sh
src/: db.rs  lib.rs  main.rs  models.rs
src/api/: mod.rs
src/api/handlers/: asset.rs  business_unit.rs  incident.rs  mod.rs  org.rs  permission.rs  role.rs  tpp.rs  user.rs
src/cli/: mod.rs
src/cli/handlers/: incident.rs  mod.rs  org.rs  tpp.rs  user.rs
tests/: api_integration.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
