[package]
name = "DORAEU"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "=4.3.24", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "tls-native-tls"
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
